--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -3,13 +3,13 @@
   margin: 80px 0px;
 }
 
-.welcome-header h1 {
+.welcome-header .welcome-header__title {
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 24px;
 }
 
-.welcome-header p {
+.welcome-header .welcome-header__text {
   opacity: 0.6;
 }
 
@@ -24,25 +24,25 @@
   padding: 20px 0px;
 }
 
-.login-form input:not([type="submit"]) {
+.login-form .login-form__input {
   border-bottom: 1.5px solid rgba(0, 0, 0, 0.2);
   transition: border-bottom 0.3s ease-in-out;
 }
 
-.login-form input::placeholder {
+.login-form .login-form__input::placeholder {
   font-size: 18px;
   opacity: 0.8;
 }
 
-.login-form input:focus:not([type="submit"]) {
+.login-form .login-form__input:focus {
   border-bottom: 1.5px solid var(--yellow);
 }
 
-.login-form input:nth-child(2) {
+.login-form .login-form__input:nth-child(2) {
   margin-bottom: 30px;
 }
 
-.login-form input[type="submit"] {
+.login-form .login-form__btn {
   font-size: 18px;
   cursor: pointer;
   margin-bottom: 16px;
@@ -50,11 +50,11 @@
   transition: background-color 0.3s ease-in-out;
 }
 
-.login-form input[type="submit"]:hover {
+.login-form .login-form__btn:hover {
   background-color: var(--yellow);
 }
 
-.login-form a {
+.login-form .login-form__link {
   text-align: center;
   text-decoration: none;
   color: inherit;
@@ -62,6 +62,6 @@
   font-size: 14px;
 }
 
-.login-form a:hover {
+.login-form .login-form__link:hover {
   opacity: 0.6;
 }
