--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,7 +1,10 @@
 .status-bar {
   display: flex;
   justify-content: center;
-  margin: 4px 8px;
+  padding: 4px 8px;
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
 
 .status-bar .status-bar__column:first-child span {
