--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,17 @@
 
 /* Components */
 @import "components/status-bar.css";
+@import "components/nav-bar.css";
 
 /* Screen */
 @import "screens/login.css";
 
+* {
+  box-sizing: border-box;
+}
+
 body {
+  height: 1000vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
