--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 /* Components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
 
 /* Screen */
 @import "screens/login.css";
@@ -16,4 +17,10 @@ body {
   height: 1000vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.top-fixed {
+  position: fixed;
+  width: 100%;
+  top: 0;
 }
