--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -19,26 +19,58 @@
 }
 
 .nav .nav__notification {
-  background-color: rgb(226, 59, 30);
-  display: flex;
-  width: 28px;
-  height: 28px;
-  border-radius: 50%;
-  justify-content: center;
-  align-items: center;
-  color: white;
   position: absolute;
   top: -14px;
   right: -14px;
   font-size: 18px;
 }
 
-.nav .nav__dot {
-  background-color: rgb(245, 19, 19);
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  position: absolute;
-  right: -4px;
-  top: -4px;
+.nav__notification {
+  animation: nontificationAnimation 1.5s ease-in-out infinite;
+}
+
+@keyframes nontificationAnimation {
+  0% {
+    transform: none;
+  }
+  20% {
+    transform: scaleX(0.5);
+  }
+  50% {
+    transform: scaleX(1.1);
+  }
+  70% {
+    transform: scaleX(0.7);
+  }
+  100% {
+    transform: none;
+  }
+}
+
+.nav__btn {
+  transform: translateY(50px);
+  opacity: 0;
+  animation: appearNavAnimation 0.3s ease-in-out forwards;
+}
+
+@keyframes appearNavAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+.nav__btn:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.nav__btn:nth-child(3) {
+  animation-delay: 0.3s;
+}
+
+.nav__btn:nth-child(4) {
+  animation-delay: 0.4s;
 }
