--- a/css/components/screen-size.css
+++ b/css/components/screen-size.css
@@ -6,6 +6,9 @@
   position: absolute;
   top: 0;
   z-index: 2;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
 }
 
 @media screen and (min-width: 501px) {
